# Dirt2LeaderboardDumper

./: .gitmodules  CMakeLists.txt  README.md
include/: dumper.h
src/: dumper.cpp  main.cpp
